--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <navbar id="navbar">
         <div class="navbar-container">
-            <img src="./img/logo.png" alt="" class="logo">
+            <img src="/img/logo.png" alt="" class="logo">
             <ul class="navbar-itens">
                 <li class="navbar-item"><a href="#">Premium</a></li>
                 <li class="navbar-item"><a href="#">Ajuda</a></li>
@@ -33,7 +33,7 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="footer-content">
-       <img src="./img/logo.png" alt="" class="logo">
+       <img src="/img/logo.png" alt="" class="logo">
        <ul class="footer-menu">
            <p>Empresa</p>
            <li class="footer-menu-item">
@@ -98,7 +98,7 @@
          </ul>
          <div class="rights">
              <div class="county">
-             <img src="./img/brazil.png" alt="Bandeira do Brasil" class="brazil-flag">
+             <img src="/img/brazil.png" alt="Bandeira do Brasil" class="brazil-flag">
              </div>
              <p> &copy; 2023 </p>
          </div>
