--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <navbar id="navbar">
         <div class="navbar-container">
-            <img src="./img/logo.png" alt="" class="logo">
+            <img src="img/logo.png" alt="" class="logo">
             <ul class="navbar-itens">
                 <li class="navbar-item"><a href="#">Premium</a></li>
                 <li class="navbar-item"><a href="#">Ajuda</a></li>
